tests/expectations/compiler/function/mutual_recursion_fail.out
DCE_ENABLED:
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:12:16
     |
  12 |         return bax(n);
     |                ^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:16:16
     |
  16 |         return baz(n);
     |                ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:4:16
     |
   4 |         return bar(n);
     |                ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:8:16
     |
   8 |         return foo(n);
     |                ^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `baz` --> `bax` --> `baz`

DCE_DISABLED:
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:12:16
     |
  12 |         return bax(n);
     |                ^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:16:16
     |
  16 |         return baz(n);
     |                ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:4:16
     |
   4 |         return bar(n);
     |                ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:8:16
     |
   8 |         return foo(n);
     |                ^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `baz` --> `bax` --> `baz`
